--- a/Marin/Other/css/widgets.css
+++ b/Marin/Other/css/widgets.css
@@ -3,6 +3,20 @@
 * required for San/Van.
 */
 
+/* all of our html foreign objects in svg have a body which we don't want to
+ * inherit any attributes, I think the best we can do is set the common body
+ * attributes here
+ */
+svg body
+{
+	margin: 0;
+	padding: 0;
+	border-style: none;
+	line-height: normal;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
 
 /* Images
 ================================================== */
@@ -293,6 +307,7 @@ div.brixCheckGroup table.questionTable input[type=checkbox]
 ================================================== */
 
 div.widgetnumericquestion,
+div.brixJournal,
 div.brixMultipleChoiceQuestion 
 {
  
@@ -304,6 +319,7 @@ div.brixMultipleChoiceQuestion
   cursor: default; 
 }
 
+div.brixJournal fieldset,
 div.brixMultipleChoiceQuestion fieldset 
 {
   display: inline-block;
@@ -316,6 +332,7 @@ div.brixMultipleChoiceQuestion fieldset
   -webkit-padding-after: 0.625em;
 }
 
+div.brixJournal fieldset legend,
 div.brixMultipleChoiceQuestion fieldset legend 
 {
   line-height: 40px;
@@ -331,19 +348,35 @@ div.brixMultipleChoiceQuestion label
   line-height: 30px;
 }
 
-div.brixMultipleChoiceQuestion .choiceLabel 
+
+div.brixJournal .journalTextarea
+{
+  margin-left: 10px;
+}
+
+div.brixJournal .journalTextarea textarea
+{
+  overflow: auto;
+  max-width: 556px;
+  width: 100%;
+  resize: none;
+}
+
+div.brixMultipleChoiceQuestion .choiceLabel
 {
   font: bold 16px Helvetica;
   color: #4d4d4d;
-  margin: 0 5px; 
+  margin: 0 5px;
 }
 
+div.brixJournal .submit,
 div.brixMultipleChoiceQuestion .submit
 {
   float: left;
 }
 
-div.brixMultipleChoiceQuestion span.attempts 
+div.brixJournal span.attempts,
+div.brixMultipleChoiceQuestion span.attempts
 {
   margin-top: 5px;
   display: inline-block;
@@ -367,6 +400,7 @@ div.brixMultipleChoiceQuestion span.attempts span.descr
   width: 80px;
 }
 
+div.brixJournal .submit button:disabled,
 div.brixMultipleChoiceQuestion .submit button:disabled
 {
   border-color: #e0e0e0;
@@ -417,10 +451,9 @@ div.brixMultipleChoiceQuestion .submit button:disabled
     background: linear-gradient(#0D65A6 0%, #0E6CB3 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
     border-color: #c0c0c0;
     text-shadow: #e0e0e0;
-
-
 }
 
+.brixJournal .feedback,
 .brixMultipleChoiceQuestion .feedback
 {
   padding: 20px;
@@ -450,6 +483,7 @@ div.brixMultipleChoiceQuestion .submit button:disabled
   padding: 20px;
 }
 
+.brixJournal .feedback .feedback-correct,
 .brixMultipleChoiceQuestion .feedback .feedback-correct,
 .brixMultipleChoiceQuestion .feedback .feedback-incorrect,
 .brixMultipleChoiceQuestion .feedback .feedback-partial
@@ -472,6 +506,7 @@ div.brixMultipleChoiceQuestion .submit button:disabled
   margin-right: 15px;
   margin-top: 0;
 }
+
 /*
  *  Font Awesome 3.0.2
  *  the iconic font designed for use with Twitter Bootstrap
@@ -569,7 +604,8 @@ table.widgetCallout td {
   padding-top: 5px;
   padding-bottom: 3px;
   padding-right: 15px;
-  padding-left: 15px; 
+  padding-left: 35px; 
+  text-indent: -22px;
   }
 
 table.widgetCallout thead>tr td {
@@ -605,9 +641,10 @@ table tr.widgetCallout.lit
 	display: block;
 	float: left;*/
 
-  font: bold 13px Helvetica;
+  font: bold 16px Helvetica;
   color: #000;
-  padding: 5px 20px 5px 8px; 
+  padding-top: 4px;
+  padding-right:12px;
 }
 
 
@@ -726,7 +763,7 @@ g.brix .axis text {
 svg g.widgetLineGraph .traces,
 svg g.widgetLegend .traces 
 {
-  opacity:		0.8;
+  opacity:		0.9;
   fill: none;
   stroke-width: 3; 
 }
@@ -758,11 +795,11 @@ svg g.widgetLegend .legendBox {
 }
 
 svg g .stroke0 {
-  stroke: #107aca;
+  stroke: #5688D6;
    }
 
 svg g .stroke1 {
-  stroke: #b00216; }
+  stroke: #F25757; }
 
 svg g .stroke2 {
   stroke: #fabc4a; }
@@ -799,7 +836,7 @@ svg g .stroke11 {
 svg g.brixBarChart .bar,
 svg g.widgetLegend rect,
 svg g.bricPieChart path {
-  opacity: 0.8; 
+  opacity: 0.9; 
   }
 
 svg g.brixBarChart .lit .bar,
@@ -812,11 +849,11 @@ svg g.bricPieChart path .lit  {
 
 
 svg g .fill0 {
-  fill: #107aca;
+  fill: #5688D6;
   }
 
 svg g .fill1 {
-   fill: #b00216; }
+   fill: #F25757; }
 
 svg g .fill2 {
   fill: #fabc4a; }
