update the checked in build version of the brixclient to 0.93.2-dev+Rel_0.92-363-g927aeca

--- a/css/widgets.css
+++ b/css/widgets.css
@@ -45,14 +45,14 @@ svg g.brixImage>rect.highlight
 {
 	fill: none;
 	fill-opacity:	0.0;
-	stroke-opacity:	0.0;	
+	stroke-opacity:	0.0;
 }
 
 svg g.brixImage.lit>rect.highlight
 {
 	fill-opacity:	0.0;
 	stroke:	blue;
-	stroke-opacity:	0.8;	
+	stroke-opacity:	0.8;
 }
 
 svg g.brixCarousel>rect.background
@@ -67,24 +67,24 @@ svg g.brixCarousel>g.brixItem>rect.selection
 	fill-opacity:	0.0;
 	stroke:		#999;
   stroke-width: 1;
-	stroke-opacity:	0.0;	
+	stroke-opacity:	0.0;
 }
 
 svg g.brixCarousel>g.brixItem.selected>rect.selection
 {
 	fill-opacity:	0.3;
-	stroke-opacity:	1;	
+	stroke-opacity:	1;
 }
 
 svg g.brixImageViewer>rect,
-svg g.brixLabelCarousel>rect 
+svg g.brixLabelCarousel>rect
 {
 	fill:	#f0f0f0;
 	stroke-width:	1;
   stroke: #f0f0f0;
 }
 
-.brixImageCaption 
+.brixImageCaption
 {
   font: 16px Helvetica;
   background: #fff;
@@ -269,18 +269,18 @@ div.brixRadioGroup tr>td
 {
   padding: 0;
 }
-div.brixRadioGroup table.questionTable, 
+div.brixRadioGroup table.questionTable,
 div.brixCheckGroup table.questionTable
 {
   margin: 0 0 0 25px;
 }
 
 
-div.brixRadioGroup .choiceLabel, 
-div.brixCheckGroup .choiceLabel 
+div.brixRadioGroup .choiceLabel,
+div.brixCheckGroup .choiceLabel
 {
   font-weight: bold;
-  margin: 0 5px; 
+  margin: 0 5px;
 }
 
 div.brixRadioGroup table.questionTable tr>td:first-child,
@@ -288,14 +288,14 @@ div.brixCheckGroup table.questionTable tr>td:first-child
 {
   text-align:   right;
   vertical-align:top;
-  padding-top: 5px; 
+  padding-top: 5px;
 }
 div.brixRadioGroup table.questionTable tr>td:nth-of-type(2),
 div.brixCheckGroup table.questionTable tr>td:nth-of-type(2)
 {
   padding-left: 8px;
 }
-   
+
 div.brixRadioGroup table.questionTable input[type=radio],
 div.brixCheckGroup table.questionTable input[type=checkbox]
 {
@@ -315,14 +315,14 @@ div.brixJournal :last-child
 
 div.widgetnumericquestion,
 div.brixJournal,
-div.brixMultipleChoiceQuestion 
+div.brixMultipleChoiceQuestion
 {
- 
+
   padding: 10px 0;
   margin-bottom: 10px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  cursor: default; 
+  cursor: default;
 }
 
 div.brixJournal fieldset
@@ -336,7 +336,7 @@ div.brixJournal fieldset
   margin-bottom: auto;
 }
 
-div.brixMultipleChoiceQuestion fieldset 
+div.brixMultipleChoiceQuestion fieldset
 {
   display: inline-block;
   border: 0;
@@ -350,7 +350,7 @@ div.brixMultipleChoiceQuestion fieldset
 }
 
 div.brixJournal fieldset legend,
-div.brixMultipleChoiceQuestion fieldset legend 
+div.brixMultipleChoiceQuestion fieldset legend
 {
   line-height: 40px;
   color: #4d4d4d;
@@ -358,7 +358,7 @@ div.brixMultipleChoiceQuestion fieldset legend
   margin-bottom: 5px;
 }
 
-div.brixMultipleChoiceQuestion label 
+div.brixMultipleChoiceQuestion label
 {
   font: 16px Helvetica;
   color: #4d4d4d;
@@ -425,7 +425,7 @@ div.brixMultipleChoiceQuestion .submit button:disabled
   background: #e0e0e0;
   text-shadow: none;
   cursor: default;
-  color: #686868;  
+  color: #686868;
 }
 
 .brixButton button
@@ -449,7 +449,7 @@ div.brixMultipleChoiceQuestion .submit button:disabled
     display: inline-block;
     margin-bottom: 0;
     vertical-align: middle;
-    
+
 }
 
 .brixButton button:hover,
@@ -486,7 +486,7 @@ div.brixMultipleChoiceQuestion .submit button:disabled
   box-sizing: border-box;
   -moz-transition: bottom 0.3s;
   -webkit-transition: bottom 0.3s;
-  transition: bottom 0.3s; 
+  transition: bottom 0.3s;
 }
 
 .brixMultipleChoiceQuestion .feedback .custom-feedback
@@ -557,7 +557,7 @@ div.brixMultipleChoiceQuestion .submit button:disabled
 /*  Font Awesome styles
     ------------------------------------------------------- */
 [class^="icon-"],
-[class*=" icon-"] 
+[class*=" icon-"]
 {
   font-family: FontAwesome;
   font-weight: normal;
@@ -581,28 +581,28 @@ div.brixMultipleChoiceQuestion .submit button:disabled
   display: inline-block;
   speak: none; }
 
-.icon-ok-sign:before 
+.icon-ok-sign:before
 {
-  content: "\f058"; 
+  content: "\f058";
   color: #00a05e;
 }
 
-.icon-check:before 
+.icon-check:before
 {
-  content: "\f00c"; 
+  content: "\f00c";
   color: #00a05e;
 }
 
-.icon-wrong:before 
+.icon-wrong:before
 {
   content: "\f057";
-  color: #dc3535; 
+  color: #dc3535;
 }
 
-.icon-adjust:before 
+.icon-adjust:before
 {
   content: "\f057";
-  color: #dc3535; 
+  color: #dc3535;
 }
 
 
@@ -610,9 +610,9 @@ div.brixMultipleChoiceQuestion .submit button:disabled
 ================================================== */
 table.widgetCallout {
   border-collapse: collapse;
-  border-spacing: 0; 
+  border-spacing: 0;
   border: 2px solid #f4f4f4;
-  width: auto; 
+  width: auto;
   font: 14px Helvetica;
   margin-bottom: 15px;
   }
@@ -622,18 +622,18 @@ table.widgetCallout td {
   padding-top: 5px;
   padding-bottom: 3px;
   padding-right: 15px;
-  padding-left: 35px; 
+  padding-left: 35px;
   text-indent: -22px;
   }
 
 table.widgetCallout thead>tr td {
   border-bottom: 2px solid #f4f4f4;
   padding-bottom: 3px;
-  font-weight: bold; 
+  font-weight: bold;
   text-align: left;}
-  
 
-table tr.widgetCallout.lit 
+
+table tr.widgetCallout.lit
 {
 	color:#1d456e;
 	border-left: 4px solid #107aca;
@@ -643,15 +643,15 @@ table tr.widgetCallout.lit
 /* used in callout automatic step numbering */
 
 .stepBadge {
-     /* background: radial-gradient( 5px -9px, circle, white 8%, black 26px ); 
+     /* background: radial-gradient( 5px -9px, circle, white 8%, black 26px );
     background-color: black;
     border: 2px solid white;
-    border-radius: 14px; /* one half of ( (border * 2) + height + padding ) 
-    
- Got this from stack overflow, it's pretty close 
+    border-radius: 14px; /* one half of ( (border * 2) + height + padding )
+
+ Got this from stack overflow, it's pretty close
     color: white;
     font: 0.9em/1.3em Helvetica, Verdana, Tahoma;
-    height: 16px; 
+    height: 16px;
     min-width: 16px;
     padding: 4px 3px 2px 3px;
   	margin: 4px 11px 3px 0px;
@@ -668,12 +668,12 @@ table tr.widgetCallout.lit
 
 
 
- 
+
 /* sketches
 ================================================== */
 
 svg g.widgetSketch .shape {
-	
+
 	stroke: #666;
 	stroke-width: 2;
 }
@@ -693,7 +693,7 @@ svg g.widgetSketch .shape>text {
 	fill: #333;
 	stroke: none;
 	font: bold italic 1.3em Times, serif;
-  
+
 }
 
 /* Math and questions
@@ -736,21 +736,21 @@ svg g.widgetSketch .shape>text {
   padding: 0em 0.2em; }
 
 
-	
+
 /* Axes
 ================================================== */
 g.brix .axis path,
 g.brix .axis line,
 g.brix .axis circle {
   fill: none;
-  stroke: #bbbbbb; 
+  stroke: #bbbbbb;
   shapeRendering: crisp-edges;
   stroke-width: 1;
 }
 
 g.brix .axis text {
   font: 14px Helvetica;
-  color: #008496; 
+  color: #008496;
 }
 
 .areaMarker {
@@ -761,7 +761,7 @@ g.brix .axis text {
   font: 14px Helvetica;
   color: #000;
   word-wrap: break-word;
-  text-align: center; 
+  text-align: center;
 }
 
 .graphLabel {
@@ -778,16 +778,19 @@ g.brix .axis text {
 /* LineGraph and legends highlights and styles
 ================================================== */
 
+svg g.brixLineGraph .trace,
 svg g.widgetLineGraph .traces,
-svg g.widgetLegend .traces 
+svg g.widgetLegend .traces
 {
   opacity:		0.9;
   fill: none;
-  stroke-width: 3; 
+  stroke-width: 3;
 }
 
+svg g.brixLineGraph .trace.lit,
+svg g.brixLineGraph .trace.selected,
 svg g.widgetLineGraph .traces.lit,
-svg g.widgetLineGraph .traces.selected,    
+svg g.widgetLineGraph .traces.selected,
 svg g.widgetLegend .lit .traces
 {
 	opacity:		1;
@@ -796,7 +799,7 @@ svg g.widgetLegend .lit .traces
 
 svg g.widgetLegend .legendLabel {
   font: 0.9em/1.1em HelveticaNeue-Light,HelveticaNeue,Helvetica, Arial, Lucida Grande, sans-serif;
-  color: #000; 
+  color: #000;
   text-align: left;
   padding: 2px;
 }
@@ -848,13 +851,13 @@ svg g .stroke10 {
 
 svg g .stroke11 {
   stroke: #8063c7; }
-  
+
 /* bars, pie wedges and points
 ================================================== */
 svg g.brixBarChart .bar,
 svg g.widgetLegend rect,
 svg g.bricPieChart path {
-  opacity: 0.9; 
+  opacity: 0.9;
   }
 
 svg g.brixBarChart .lit .bar,
@@ -921,9 +924,9 @@ svg g .fillNone {
 
 .dataLabel {
   font-weight: bold;
-  margin-left: 3px; 
+  margin-left: 3px;
   }
-  
+
 .dataLabel.green {
     background: green;
     color: #fff;
@@ -943,4 +946,45 @@ svg g .fillNone {
   margin: .1em;
   font-size: 0.8em;
   text-align:right;
+}
+
+/* stats, statsMCQ, and stackedbar
+================================================== */
+
+.brixStatsMultipleChoiceQuestion {
+  border-bottom: solid 1px #D3D3D3;
+  padding: 5px;
+  margin: 2px;
+  margin-right: 15px;
+  margin-left: 5px;
+  vertical-align: middle;
+
+  display: table;
+  width: 100%;
+}
+
+.brixStatsMultipleChoiceQuestion .topRow {
+  display: table-row;
+}
+
+.brixStatsMultipleChoiceQuestion .topRow .expandy {
+  display: table-cell;
+  width: 0px;
+}
+
+.brixStatsMultipleChoiceQuestion .topRow .question {
+  display: table-cell;
+}
+
+.brixStatsMultipleChoiceQuestion .topRow .question .questionInnards {
+  font: 14px Helvetica;
+  color: #4d4d4d;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.brixStatsMultipleChoiceQuestion .topRow .colorBar {
+  display: table-cell;
+  width: 124px;
 }
