--- a/css/brix.css
+++ b/css/brix.css
@@ -19,6 +19,17 @@ svg body
     background: transparent;
 }
 
+/* Accessiblity */
+span.dc_readeronly
+{
+	position: 	absolute;
+	left: 		-999px;
+	top: 		auto;
+	width: 		1px;
+	height:  	1px;
+	overflow: 	hidden;
+}
+
 /* Images
 ================================================== */
 
